--- a/cpbstats-ihm/app/views/signin.html
+++ b/cpbstats-ihm/app/views/signin.html
@@ -1,4 +1,10 @@
 <div class="container" id="view">
+	<div class="row">
+		<div class="col-md-12">
+			<img src="images/logo.png" alt="Capgemini logo"
+				class="img-responsive">
+		</div>
+	</div>
 	<div class="row" style="margin-bottom: 15px;">
 		<div class="col-md-2 pull-left">
 			<h4>Connexion</h4>
@@ -37,9 +43,9 @@
 						</button>
 					</div>
 					<div ng-show="isAlert" class="alert alert-danger" role="alert">
-						le pseudo ou le mot de passe que vous avez saisi est incorrecte!</div>
+						le login ou le mot de passe que vous avez saisi est incorrecte!</div>
 					<div ng-show="isAlertt" class="alert alert-success" role="alert">
-						Connexion réussie</div>
+						Connexion r&eacute;ussie</div>
 				</div>
 			</fieldset>
 		</form>
