--- a/cpbstats-ihm/app/views/home.html
+++ b/cpbstats-ihm/app/views/home.html
@@ -1,49 +1,53 @@
-<div class="container" id="view" ng-controller="HomeCtrl">
+<div class="container-fluid" id="view" ng-controller="HomeCtrl">
 	<div class="row" style="margin-bottom: 50px;">
-		<div class="col-md-2 pull-right">
-			<h4>Dashboard</h4>
+		<div class="col-md-12 pull-left">
+			<h4>Mes Rencontres</h4>
 		</div>
-			<canvas id="doughnut" class="chart chart-doughnut" data="data"
+		<div class="col-md-4 pull-left">
+			<canvas id="chart-bar" class="chart chart-bar" data="data1"
+  			series="series1"	labels="labels1"></canvas> 
+		</div>
+		<div class="col-md-4 pull-left">
+			<canvas id="line" class="chart chart-line" data="data1"
+  labels="labels1" legend="true" series="series1"></canvas> 
+		</div>
+		<div class="col-md-4 pull-left">
+			<canvas id="chart-polar-area" class="chart chart-polar-area" data="data"
   				labels="labels"></canvas> 
+		</div>
 	</div>
 	<div class="row" style="margin-bottom: 50px;">
-		<div class="col-md-3 text-center"
-			ng-if="isAdmin() || isCommercial() || isProjectHeader()">
-			<a ng-href="{{poLink}}" ng-click="poRedirect()"> <span
-				class="badge pull-right" style="background-color: red;"
-				ng-if="(isAdmin() || isProjectHeader()) && nbPoLineToValidate !==0">{{nbPoLineToValidate}}</span>
-				<img src="images/purchaseOrder.png" alt="Po logo"
-				class="img-responsive">
-			</a>
-			<h4>Purchase Order</h4>
+		<div class="col-md-12 pull-left">
+			<h4>Mon activité de la semaine</h4>
 		</div>
-		<div class="col-md-3 col-md-offset-1 text-center"
-			ng-if="isAdmin() || isProjectHeader()">
-			<a> <img src="images/order-history.png" alt="Orders logo"
-				class="img-responsive">
-			</a>
-			<h4>Orders</h4>
+		<div class="col-md-4 pull-left">
+			<canvas id="doughnut" class="chart chart-doughnut" data="data"
+  				labels="labels"></canvas> 
 		</div>
-		<div class="col-md-3 col-md-offset-1 text-center"
-			ng-if="isAdmin() || isProjectHeader()">
-			<a><span class="badge pull-right" style="background-color: red;"
-				ng-if="isAdmin() || isProjectHeader()">Notif</span> <img
-				src="images/invoice.png" alt="Invoice logo" class="img-responsive">
-			</a>
-			<h4>Invoices</h4>
+		<div class="col-md-4 pull-left">
+			<canvas id="chart-pie" class="chart chart-pie" data="data"
+  				labels="labels"></canvas> 
 		</div>
-		<div class="col-md-3 text-center"
-			ng-if="isAdmin() || isCommercial() || isProjectHeader()">
-			<a> <img src="images/reporting.png" alt="Reporting logo"
-				class="img-responsive">
-			</a>
-			<h4>Reporting</h4>
+		<div class="col-md-4 pull-left">
+			<canvas id="radar" class="chart chart-radar" data="data1"
+  			series="series1"	labels="labels1"></canvas> 
 		</div>
-		<div class="col-md-3 col-md-offset-1 text-center" ng-if="isAdmin()">
-			<a> <img src="images/settings.png" alt="Settings logo"
-				class="img-responsive">
-			</a>
-			<h4>Settings</h4>
+	</div>
+	<div class="row" style="margin-bottom: 50px;">
+		<div class="col-md-12 pull-left">
+			<h4>Mon activité du mois</h4>
+		</div>
+		<div class="col-md-4 pull-left">
+			<canvas id="chart-bar" class="chart chart-bar" data="data1"
+  			series="series1"	labels="labels1"></canvas> 
+		</div>
+		<div class="col-md-4 pull-left">
+			<canvas id="line" class="chart chart-line" data="data1"
+  labels="labels1" legend="true" series="series1"></canvas> 
+		</div>
+		<div class="col-md-4 pull-left">
+			<canvas id="chart-polar-area" class="chart chart-polar-area" data="data"
+  				labels="labels"></canvas> 
 		</div>
 	</div>
 </div>
