--- a/cpbstats-ihm/app/styles/main.css
+++ b/cpbstats-ihm/app/styles/main.css
@@ -104,24 +104,14 @@ html, body {
 }
 
 {
-box-sizing
 
 
-
-
-:
-
-
- 
-
-
-border-box
-
-
-
-
-;
+.border {
+	border-radius: 30px;
+	background-color: #F5F5F5;
+	padding-bottom : 50px;
 }
+
 .validate-page {
 	width: 100%;
 }
