--- a/cpbstats-ihm/app/views/signin.html
+++ b/cpbstats-ihm/app/views/signin.html
@@ -1,7 +1,7 @@
 <div class="container" id="view">
 	<div class="row">
 		<div class="col-md-12">
-			<img src="images/logo.png" alt="Capgemini logo"
+			<img src="images/logo.png" alt="CPB logo"
 				class="img-responsive">
 		</div>
 	</div>
