--- a/cpbstats-ihm/app/views/home.html
+++ b/cpbstats-ihm/app/views/home.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" id="view" ng-controller="HomeCtrl">
+<div class="container" id="view" ng-controller="HomeCtrl">
 	<div class="row" style="margin-bottom: 50px;">
 		<div class="col-md-12 pull-left">
 			<h4>Mes Rencontres</h4>
