--- a/cpbstats-ihm/app/views/signin.html
+++ b/cpbstats-ihm/app/views/signin.html
@@ -1,12 +1,12 @@
 <div class="container" id="view">
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-4 col-md-offset-4">
 			<img src="images/logo.png" alt="CPB logo"
 				class="img-responsive">
 		</div>
 	</div>
 	<div class="row" style="margin-bottom: 15px;">
-		<div class="col-md-2 pull-left">
+		<div class="col-md-5 col-md-offset-4 pull-left">
 			<h4>Connexion</h4>
 		</div>
 	</div>
@@ -14,7 +14,7 @@
 		<form class="form-horizontal">
 			<fieldset>
 				<div class="form-group">
-					<div class="input-group input-group-lg">
+					<div class="input-group input-group-lg col-sm-6 col-md-4 col-md-offset-4">
 						<span class="input-group-addon"> <span
 							class="glyphicon glyphicon-user"></span>
 						</span>
@@ -25,7 +25,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<div class="input-group input-group-lg">
+					<div class="input-group input-group-lg col-sm-6 col-md-4 col-md-offset-4">
 						<span class="input-group-addon"> <span
 							class="glyphicon glyphicon-lock"></span>
 						</span>
@@ -36,7 +36,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-6 col-md-4 col-md-offset-4">
+					<div class="col-sm-6 col-md-2 col-md-offset-5">
 						<button ng-click="submit()"
 							class="btn btn-primary btn-md btn-block">
 							<span class="glyphicon glyphicon-log-in"></span> Se connecter
