Rework + ajout objectifs

--- a/cpbstats-ihm/app/views/home.html
+++ b/cpbstats-ihm/app/views/home.html
@@ -25,8 +25,7 @@
   				labels="labels"></canvas> 
 		</div>
 		<div class="col-md-4 pull-left">
-			<canvas id="chart-pie" class="chart chart-pie" data="data"
-  				labels="labels"></canvas> 
+			<canvas id="chart-pie" class="chart chart-pie" data="dataTypeExercices" labels="labelsTypeExercices"></canvas> 
 		</div>
 		<div class="col-md-4 pull-left">
 			<canvas id="radar" class="chart chart-radar" data="data1"
