--- a/cpbstats-ihm/app/views/objectifs.html
+++ b/cpbstats-ihm/app/views/objectifs.html
@@ -20,7 +20,7 @@
 			<br>
 			<br>
 			<accordion data-ng-repeat="objectif in objectifs">
-			    <accordion-group is-open="status.open" class="accordion_modifyed">
+			    <accordion-group is-open="status.open" >
 		        <accordion-heading class="">
 		        <div class="">
 		           <i class="pull-left glyphicon" ng-class="{'glyphicon-chevron-down': status.open,  'glyphicon-chevron-right': !status.open}"></i>
@@ -29,11 +29,30 @@
 						<span class="glyphicon glyphicon-remove"></span>
 					</button>
 					</div>
-					</div>
+				</div>
 		        </accordion-heading>
-		        	<form name="formSearch" class="panel-heading search_dossier" role="form">
-		        		<label class="control-label search_form">Objectif : </label>
+		        	<form name="formAddObjEx" class="panel-heading" role="form">
+        				<div class="col-md-2">
+        					<select data-ng-model="newObjectifExercice.typeExercice" data-ng-options="typeExercice as typeExercice.libelle for typeExercice in typeExercices" class="form-control input-sm"></select>
+        				</div>
+        				<div class="col-md-1">
+        					<input data-ng-model="newObjectifExercice.data" type="text" class="form-control input-sm"> 
+        				</div>
+        				<div class="col-md-1">
+        					{{newObjectifExercice.typeExercice.unite}}
+        				</div>
+		   				<div class="col-xs-6 col-md-2 pull-left" >
+		   					<button class="btn" data-ng-click="addObjectifExercice(newObjectifExercice, $index)">
+								<span class="glyphicon glyphicon-plus"></span>
+							</button>
+		   				</div>
 					</form>
+					<br>
+					<br>
+					<div class="col-md-12 text-left" data-ng-repeat="objectifExercice in objectif.objectifExercices">
+		        		<div class="col-md-2 text-left">{{objectifExercice.typeExercice.libelle}} :</div>
+		        		<div class="col-md-2 text-left">{{objectifExercice.data}} {{objectifExercice.typeExercice.unite}}</div>
+        			</div>
 		    	</accordion-group>
 		  	</accordion>
 		</div>
