--- a/cpbstats-ihm/app/views/home.html
+++ b/cpbstats-ihm/app/views/home.html
@@ -1,52 +1,59 @@
 <div class="container" id="view" ng-controller="HomeCtrl">
-	<div class="row" style="margin-bottom: 50px;">
-		<div class="col-md-12 pull-left">
-			<h4>Mes Rencontres</h4>
+	
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		    <h3 class="panel-title">Mes Rencontres</h3>
+		  </div>
+		  <div class="panel-body">
+			<div class="col-md-4 pull-left">
+				<canvas id="chart-bar" class="chart chart-bar" data="data1"
+	  			series="series1"	labels="labels1"></canvas> 
+			</div>
+			<div class="col-md-4 pull-left">
+				<canvas id="line" class="chart chart-line" data="data1"
+	  				labels="labels1" legend="true" series="series1"></canvas> 
+			</div>
+			<div class="col-md-4 pull-left">
+				<canvas id="chart-polar-area" class="chart chart-polar-area" data="data"
+	  				labels="labels"></canvas> 
+			</div>
+		  </div>
 		</div>
-		<div class="col-md-4 pull-left">
-			<canvas id="chart-bar" class="chart chart-bar" data="data1"
-  			series="series1"	labels="labels1"></canvas> 
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		    <h3 class="panel-title">Mon activité de la semaine</h3>
+		  </div>
+		  <div class="panel-body">
+			<div class="col-md-4 pull-left">
+				<canvas id="doughnut" class="chart chart-doughnut" data="data"
+	  				labels="labels"></canvas> 
+			</div>
+			<div class="col-md-4 pull-left">
+				<canvas id="chart-pie" class="chart chart-pie" data="dataTypeExercices" labels="labelsTypeExercices"></canvas> 
+			</div>
+			<div class="col-md-4 pull-left">
+				<canvas id="radar" class="chart chart-radar" data="data1"
+	  			series="series1"	labels="labels1"></canvas> 
+			</div>
+		  </div>
 		</div>
-		<div class="col-md-4 pull-left">
-			<canvas id="line" class="chart chart-line" data="data1"
-  labels="labels1" legend="true" series="series1"></canvas> 
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		    <h3 class="panel-title">Mon activité du mois</h3>
+		  </div>
+		  <div class="panel-body">
+			<div class="col-md-4 pull-left">
+				<canvas id="chart-bar" class="chart chart-bar" data="data1"
+	  			series="series1"	labels="labels1"></canvas> 
+			</div>
+			<div class="col-md-4 pull-left">
+				<canvas id="line" class="chart chart-line" data="data1"
+	  				labels="labels1" legend="true" series="series1"></canvas> 
+			</div>
+			<div class="col-md-4 pull-left">
+				<canvas id="chart-polar-area" class="chart chart-polar-area" data="data"
+	  				labels="labels"></canvas> 
+			</div>
+		  </div>
 		</div>
-		<div class="col-md-4 pull-left">
-			<canvas id="chart-polar-area" class="chart chart-polar-area" data="data"
-  				labels="labels"></canvas> 
-		</div>
-	</div>
-	<div class="row" style="margin-bottom: 50px;">
-		<div class="col-md-12 pull-left">
-			<h4>Mon activité de la semaine</h4>
-		</div>
-		<div class="col-md-4 pull-left">
-			<canvas id="doughnut" class="chart chart-doughnut" data="data"
-  				labels="labels"></canvas> 
-		</div>
-		<div class="col-md-4 pull-left">
-			<canvas id="chart-pie" class="chart chart-pie" data="dataTypeExercices" labels="labelsTypeExercices"></canvas> 
-		</div>
-		<div class="col-md-4 pull-left">
-			<canvas id="radar" class="chart chart-radar" data="data1"
-  			series="series1"	labels="labels1"></canvas> 
-		</div>
-	</div>
-	<div class="row" style="margin-bottom: 50px;">
-		<div class="col-md-12 pull-left">
-			<h4>Mon activité du mois</h4>
-		</div>
-		<div class="col-md-4 pull-left">
-			<canvas id="chart-bar" class="chart chart-bar" data="data1"
-  			series="series1"	labels="labels1"></canvas> 
-		</div>
-		<div class="col-md-4 pull-left">
-			<canvas id="line" class="chart chart-line" data="data1"
-  labels="labels1" legend="true" series="series1"></canvas> 
-		</div>
-		<div class="col-md-4 pull-left">
-			<canvas id="chart-polar-area" class="chart chart-polar-area" data="data"
-  				labels="labels"></canvas> 
-		</div>
-	</div>
 </div>
